# evolve-pigeon

./: Cargo.toml  TODO.md  \
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: learn.md  lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  config.rs  eye.rs  food.rs  lib.rs  world.rs
src/: main.rs
web/: helpers.js  index.html  index.js  package-lock.json  package.json
