[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-genetic-algorithm = { path="../genetic-algorithm"}
lib-neural-network = { path = "../neural-network"}
nalgebra = { version = "0.26", features = ["rand-no-std"] }
rand = "0.8"
test-case = "3.3.1"
rayon = "1.9"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
